--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1 class="header-title">Elena's Diner</h1>
+      <h1 class="header-title">Elena's Restaurant</h1>
       <h2 class="header-subtitle">The best burgers and pizzas in town.</h2>
     </header>
     <div class="container">
